--- a/Template_regression.ipynb
+++ b/Template_regression.ipynb
@@ -1206,11 +1206,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from xgboost import XGBRegressor\n",
     "from sklearn.svm import SVR\n",
     "from sklearn.linear_model import ElasticNet\n",
     "from sklearn.neighbors import KNeighborsRegressor\n",
@@ -1222,11 +1221,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "regressors =   [XGBRegressor(),\n",
+    "regressors =   [\n",
     "                SVR(),\n",
     "                ElasticNet(),\n",
     "                KNeighborsRegressor(),\n",
